Updates for version 0.1.0 (#333)
* Update version requirements

* Remove download_url

* Add upper requirements

* Remove basix source

* Update setup.py

* Bump UFC version

* merge fix

* Cleanup setup.py

* Push tagged versiond docs.

* Fix requirements

* Only python docs for ffcx

* Run on tags, only run integration on pulls onto main.

Co-authored-by: Jack S. Hale <mail@jackhale.co.uk>

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,7 +4,16 @@
 
 name: FFCx CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - "**"
+    tags:
+      - "*.*.*.*"
+      - "*.*.*"
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -101,21 +110,31 @@ jobs:
           path: doc/build/html/
           retention-days: 2
           if-no-files-found: error
+
       - name: Checkout FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
         with:
           repository: "FEniCS/docs"
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
-      - name: Push documentation to repository FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/ffcx' && github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+      - name: Set version name
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        run: |
+          echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Copy documentation into repository
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        run: |
+          cd docs
+          git rm -r --ignore-unmatch ffcx/${{ env.VERSION_NAME }}
+          mkdir -p ffcx/${{ env.VERSION_NAME }}
+          cp -r ../python/doc/build/html/* ffcx/${{ env.VERSION_NAME }}
+      - name: Commit and push documentation to FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           cd docs
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
-          git rm -r ffcx/main/*
-          mkdir -p ffcx/main
-          cp -r ../doc/build/html/* ffcx/main
           git add --all
           git commit --allow-empty -m "Python FEniCS/ffcx@${{ github.sha }}"
           git push
