--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -71,14 +71,10 @@ jobs:
         run: |
           pip install .
 
-      - name: Run unit tests
+      - name: Run unit tests and demos
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist sympy
-          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
-
-      - name: Runs demos
-        run: |
-          pytest -n auto --cov=ffcx/ --cov-append --junitxml=junit/demo-results-${{ matrix.os }}-${{ matrix.python-version }}.xml demo/test_demos.py
+          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/ demo/
 
       - name: Upload to Coveralls
         if: ${{ github.repository == 'FEniCS/ffcx' && github.head_ref == '' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
