--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -71,10 +71,10 @@ jobs:
         run: |
           pip install .
 
-      - name: Run unit tests and demos
+      - name: Run units tests
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist sympy
-          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/ demo/
+          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
 
       - name: Upload to Coveralls
         if: ${{ github.repository == 'FEniCS/ffcx' && github.head_ref == '' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
@@ -91,6 +91,10 @@ jobs:
         # Use always() to always run this step to publish test results
         # when there are test failures
         if: always()
+
+      - name: Runs demos
+        run: |
+          python${{ matrix.python-version }} -m pytest demo/test_demos.py
 
       - name: Build documentation
         run: |
