reduce number of pydocstyle skips

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,5 @@ column_limit = 100
 #split_before_logical_operator = true
 
 [pydocstyle]
-# Work on removing these ignores
-ignore = D100,D101,D102,D103,D104,D105,D107,
-         D200,D202,
-         D203,  # this error should be disabled
-         D205,D209,D213,
-         D401,D416,D417
-# convention = numpy
+convention = numpy
+add-ignore = D100,D101,D102,D103,D104,D105
