add notes in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,10 @@ column_limit = 100
 
 [pydocstyle]
 convention = numpy
-add-ignore = D100,D101,D102,D103,D104,D105
+# TODO: Work on removing these ignores
+add-ignore = D100,  # Docstrings in modules
+             D101,  # Docstrings in classes
+             D102,  # Docstrings in methods
+             D103,  # Docstrings in functions
+             D104,  # Docstrings in packages
+             D105,  # Docstrings in magic methods
