more helpful notes

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,9 +17,9 @@ column_limit = 100
 [pydocstyle]
 convention = numpy
 # TODO: Work on removing these ignores
-add-ignore = D100,  # Docstrings in modules
-             D101,  # Docstrings in classes
-             D102,  # Docstrings in methods
-             D103,  # Docstrings in functions
-             D104,  # Docstrings in packages
-             D105,  # Docstrings in magic methods
+add-ignore = D100,  # Missing docstrings in modules
+             D101,  # Missing docstrings in classes
+             D102,  # Missing docstrings in methods
+             D103,  # Missing docstrings in functions
+             D104,  # Missing docstrings in packages
+             D105,  # Missing docstrings in magic methods
