--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -28,6 +28,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Install dependencies (Python)
         run: |
           python3 -m pip install --upgrade pip
@@ -48,7 +49,6 @@ jobs:
           path: ./basix
           repository: FEniCS/basix
           ref: main
-
       - name: Install Basix
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S ./basix
@@ -66,7 +66,7 @@ jobs:
           path: ./dolfinx
           repository: FEniCS/dolfinx
           ref: main
-      - name: Clone and install DOLFINx
+      - name: Install DOLFINx
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/cpp/
           cmake --build build
