Update Basix interface to allow variants (#376)
* branches

* pass basix.LatticeType.equispaced for coordinate elements

* update test to use GLL points

* container name

* use variant from ufl rather than passing kwargs/args around

* write lattice_type into ufc

* correct mixed and blocked elements

* flake8 fix

* use int not string for lattice type

* int() not .value

* update interface to use enums

* gll variant in test

* write basix enums into ufc_finite_element

* args, not kwargs

* one fewer string

* give better name to "args"

* gll_warped -> gll

* remove needs_lattice_type

* basix main

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: Run DOLFINx tests
     runs-on: ubuntu-latest
-    container: fenicsproject/test-env:openmpi
+    container: fenicsproject/test-env:latest-openmpi
 
     env:
       CC: clang-10
@@ -58,7 +58,7 @@ jobs:
         with:
           path: ./dolfinx
           repository: FEniCS/dolfinx
-          ref: main
+          ref: mscroggs/lagrange_gll
       - name: Clone and install DOLFINx
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/cpp/
