--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install pygraphviz
-          pip install git+https://github.com/FEniCS/ufl.git --user
+          pip install git+https://github.com/FEniCS/ufl.git@jpdean/meshview --user
           pip install git+https://github.com/FEniCS/basix.git --user
 
       - name: Lint with flake8
