Work in progress.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,13 @@
+[options]
+include_package_data = True
+packages =
+    ffcx
+    ffcx.codegeneration
+    ffcx.codegeneration.c
+    ffcx.ir
+    ffcx.ir.analysis
+zip_safe = False
+
 [tool:pytest]
 norecursedirs=libs doc
 log_cli=1
