--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,62 @@
+# Setuptools does not yet support modern pyproject.toml but will do so in the
+# future
+[metadata]
+name = fenics-ffcx
+version = 0.3.1.dev0
+author = FEniCS Project Contributors
+email = fenics-dev@googlegroups.com
+maintainer = FEniCS Project Steering Council
+description = The FEniCSx Form Compiler
+url = https://github.com/FEniCS/ffcx
+project_urls =
+    Homepage = https://fenicsproject.org
+    Documentation = https://docs.fenicsproject.org
+    Issues = https://github.com/FEniCS/ffcx/issues
+    Funding = https://numfocus.org/donate
+long_description = file: README.rst
+long_description_content_type = text/rst
+license=LGPL-3.0-or-later
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
+    Operating System :: POSIX
+    Operating System :: POSIX :: Linux
+    Operating System :: MacOS :: MacOS X
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Scientific/Engineering :: Mathematics
+    Topic :: Software Development :: Libraries :: Python Modules
+    Topic :: Software Development :: Code Generators
+
 [options]
+packages = find:
 include_package_data = True
-packages =
-    ffcx
-    ffcx.codegeneration
-    ffcx.codegeneration.c
-    ffcx.ir
-    ffcx.ir.analysis
 zip_safe = False
+python_requires = >= 3.7
+setup_requires =
+    setuptools >= 42
+    wheel
+install_requires =
+    numpy
+    cffi
+    fenics-basix >= 0.3.1.dev0, <0.4.0
+    fenics-ufl >= 2021.1.0, <2021.2.0
+
+[options.extras_require]
+ci = coverage; pytest-cov; pytest-xdist
+docs = sphinx; sphinx_rtd_theme
+lint = flake8; pydocstyle
+optional = pygraphviz
+test = pytest; sympy
+
+[options.entry_points]
+console_scripts =
+    ffcx = ffcx.__main__:main
 
 [tool:pytest]
 norecursedirs=libs doc
