--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -28,18 +28,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-
-      - name: Checkout Basix
-        uses: actions/checkout@v2
-        with:
-          ref: main
-          path: basix
-
-      - name: Checkout UFL
-        uses: actions/checkout@v2
-        with:
-          ref: main
-          path: ufl
+          path: ffcx
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -58,8 +47,8 @@ jobs:
       - name: Install FEniCS dependencies (Python)
         run: |
           pip install --upgrade pip
-          cd ufl && pip install . && cd ../
-          cd basix && pip install . && cd ../
+          pip install git+https://github.com/FEniCS/ufl.git
+          pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install ffcx
         run: |
