--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          pip install --upgrade pip
+          pip install --upgrade pip setuptools
           pip install git+https://github.com/FEniCS/ufl.git
           pip install git+https://github.com/FEniCS/basix.git
 
