--- a/setup.cfg
+++ b/setup.cfg
@@ -48,11 +48,11 @@ install_requires =
     fenics-ufl >= 2021.1.0, <2021.2.0
 
 [options.extras_require]
-ci = coverage; pytest-cov; pytest-xdist
 docs = sphinx; sphinx_rtd_theme
 lint = flake8; pydocstyle
 optional = pygraphviz
 test = pytest; sympy
+ci = coverage; pytest-cov; pytest-xdist; ffcx[docs]; ffcx[lint]; ffcx[optional]; ffcx[test]
 
 [options.entry_points]
 console_scripts =
