--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ include_package_data = True
 zip_safe = False
 python_requires = >= 3.7
 setup_requires =
-    setuptools >= 42
+    setuptools >= 58
     wheel
 install_requires =
     numpy
@@ -52,7 +52,14 @@ docs = sphinx; sphinx_rtd_theme
 lint = flake8; pydocstyle
 optional = pygraphviz
 test = pytest; sympy
-ci = coverage; pytest-cov; pytest-xdist; ffcx[docs]; ffcx[lint]; ffcx[optional]; ffcx[test]
+ci =
+    coverage
+    pytest-cov
+    pytest-xdist
+    fenics-ffcx[docs]
+    fenics-ffcx[lint]
+    fenics-ffcx[optional]
+    fenics-ffcx[test]
 
 [options.entry_points]
 console_scripts =
