--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Install ffcx
         run: |
+          python -c "import setuptools; print(f'setuptools version: {setuptools.__version__)')"
+          python -c "import pip; print(f'pip version: {pip.__version__}')"
           python -m pip install .[ci]
 
       - name: Lint with flake8
