--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -51,9 +51,8 @@ jobs:
 
       - name: Install ffcx
         run: |
-          python -c "import setuptools; print(f'setuptools version: {setuptools.__version__}')"
-          python -c "import pip; print(f'pip version: {pip.__version__}')"
-          python -m pip install .[ci]
+          python -m pip install sphinx sphinx_rtd_theme flake8 pygraphviz pytest sympy coverage pytest-cov pytest-xdist
+          python -m pip install .[ci] # [ci] works locally but does not work on CI system
 
       - name: Lint with flake8
         run: |
