--- a/setup.cfg
+++ b/setup.cfg
@@ -49,9 +49,9 @@ install_requires =
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
-lint = flake8; pydocstyle
+lint = flake8; pydocstyle[toml]
 optional = pygraphviz
-test = pytest; sympy
+test = pytest >= 6.0; sympy
 ci =
     coverage
     pytest-cov
@@ -65,28 +65,8 @@ ci =
 console_scripts =
     ffcx = ffcx.__main__:main
 
-[tool:pytest]
-norecursedirs=libs doc
-log_cli=1
-
 [flake8]
 max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
 ignore = W503,  # Line length
-         E741  # Variable names l, O, I, ...
-
-[yapf]
-column_limit = 100
-#based_on_style = pep8
-#spaces_before_comment = 4
-#split_before_logical_operator = true
-
-[pydocstyle]
-convention = numpy
-# TODO: Work on removing these ignores
-add-ignore = D100,  # Missing docstrings in modules
-             D101,  # Missing docstrings in classes
-             D102,  # Missing docstrings in methods
-             D103,  # Missing docstrings in functions
-             D104,  # Missing docstrings in packages
-             D105,  # Missing docstrings in magic methods
+         E741   # Variable names l, O, I, ...
