Add coveralls to ci extras

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ optional = pygraphviz
 test = pytest >= 6.0; sympy
 ci =
     coverage
+    coveralls
     pytest-cov
     pytest-xdist
     fenics-ffcx[docs]
